@@ -81,8 +81,8 @@ public class TestMultiPhraseQueryParsing extends LuceneTestCase {
     }
 
     @Override
-    public void reset(Reader reader) throws IOException {
-      super.reset(reader);
+    public void setReader(Reader reader) throws IOException {
+      super.setReader(reader);
       this.upto = 0;
       this.lastPos = 0;
     }
